--- a/src/Components/sidebar.module.scss
+++ b/src/Components/sidebar.module.scss
@@ -1,6 +1,6 @@
 .sidebar {
     height: 100vh;
-    width: 4% !important;
-    background-color: rgb(228, 199, 146);
+    width: 3.5% !important;
+    background-image: linear-gradient(rgb(237, 125, 77), rgb(200, 95, 181));
     float: left !important;
 }
