--- a/src/Components/sidebar.module.scss
+++ b/src/Components/sidebar.module.scss
@@ -5,3 +5,8 @@
     float: left !important;
     position: fixed;
 }
+@media only screen and ( max-width: 500px ){
+    .sidebar {
+        display: none;
+    }
+}
