--- a/src/Pages/contactManager.module.scss
+++ b/src/Pages/contactManager.module.scss
@@ -104,6 +104,7 @@
         border: none;
         font-weight: 500;
     }
+    
 }
 .deleteAllMsg {
     margin-left: 20px;
@@ -175,6 +176,7 @@
     .contactCard {
         // margin-right: 50%;
         margin-left: 10%;
+        margin-top: 8%;
     }
 }
 @media only screen and (max-width : 1439px) {
