--- a/src/Pages/contactManager.module.scss
+++ b/src/Pages/contactManager.module.scss
@@ -1,195 +1,185 @@
 .mainPart {
-    margin-top: 100px;
-    margin-left: 100px;
-
+  margin-top: 100px;
+  margin-left: 100px;
 }
 .contactHeader {
-    display: flex;
-    justify-content: start;
-      div {
-        margin-right: 10px;
+  display: flex;
+  justify-content: start;
+  div {
+    margin-right: 10px;
 
-        img {
-            align-items: center;
-            height: 40px;
-            width: 40px;
-            margin-top: 11px;
-        }
-        h3 {
-            margin-bottom: 0px;
-        }
-      }
-      .sortBy {
-        margin-left: 40px;
-      }
+    img {
+      align-items: center;
+      height: 40px;
+      width: 40px;
+      margin-top: 11px;
+    }
+    h3 {
+      margin-bottom: 0px;
+    }
+  }
+  .sortBy {
+    margin-left: 40px;
+  }
 }
 .searchContacts {
-    margin-top: 35px;
-    margin-left: 50px;
-    display: flex;
-      
-    .searchInput {
-        margin-right: 20px;
-        input {
-            border-radius: 25px;
-            border-color: transparent;
-            background: #ece7e7;
-            width: 350px;
-            padding: 5px;
-        }
-        button{
-            border: none !important;
-            background:transparent;
-            position: relative;
-            right: 30px;
-        }
+  margin-top: 35px;
+  margin-left: 50px;
+  display: flex;
 
+  .searchInput {
+    margin-right: 20px;
+    input {
+      border-radius: 25px;
+      border-color: transparent;
+      background: #ece7e7;
+      width: 350px;
+      padding: 5px;
     }
     button {
-    background-image: linear-gradient(to right,rgb(237, 125, 77) , rgb(200, 95, 181));
+      border: none !important;
+      background: transparent;
+      position: relative;
+      right: 30px;
+    }
+  }
+  button {
+    background-image: linear-gradient(
+      to right,
+      rgb(237, 125, 77),
+      rgb(200, 95, 181)
+    );
     padding: 6px 8px;
     border-radius: 10px;
     color: white;
     font-weight: bold;
-    }
-    
+  }
 }
 .contactHeaderTwo {
-    width: 550px;
-    margin-left: 20px;
-    background: #ece7e7;
-    padding: 12px;
-    margin-bottom: 12px;
+  width: 550px;
+  margin-left: 20px;
+  background: #ece7e7;
+  padding: 12px;
+  margin-bottom: 12px;
 
-    .multiSelect {
-        font-weight: bold;
-        width: 25px;
-        height: 25px;
-        text-align: center;
-    }
-    
+  .multiSelect {
+    font-weight: bold;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+  }
 
-    .multiSelect:hover {
-        background-color: #cdcaca ;
-        cursor: pointer;
-    }
-   
+  .multiSelect:hover {
+    background-color: #cdcaca;
+    cursor: pointer;
+  }
 }
 .deleteAll {
-    width: 550px;
-    margin-left: 20px;
-    padding: 5px;
-    text-align: right;
-    display: flex;
-    justify-content: space-around;
-    margin-top: 8px;
-    border: 2px solid;
-    border-color: rgb(201, 37, 168);
+  width: 550px;
+  margin-left: 20px;
+  padding: 5px;
+  text-align: right;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 8px;
+  border: 2px solid;
+  border-color: rgb(201, 37, 168);
 
+  button {
+    background: none;
+    color: red;
+    border: none;
+    font-weight: 500;
+  }
+  span {
+    color: green;
+    font-weight: 500;
+  }
+  .cancelBtn {
+    background: none;
+    color: rgb(232, 101, 61);
 
-    button {
-        background: none;
-        color: red;
-        border: none;
-        font-weight: 500;
-    }
-    span {
-        color: green;
-        font-weight: 500;
-    }
-    .cancelBtn {
-        background: none;
-        color: rgb(232, 101, 61);
-
-        border: none;
-        font-weight: 500;
-    }
+    border: none;
+    font-weight: 500;
+  }
 }
 .deleteAllMsg {
-    margin-left: 20px;
-    height: 200px;
-    width: 550px;
-    margin-top: 30px;
+  margin-left: 20px;
+  height: 200px;
+  width: 550px;
+  margin-top: 30px;
 
-    span {
-        text-align: center !important;
-        display: flex;
-        justify-content: center;
-        position: relative;
-        color: #2e1add;
-        font-size: larger;
-        font-weight: bolder;
-        // top: 100px;
-    }
-    
-}
-.contactInfo {
-    width: 550px;
-    margin-left: 20px;
-    background:none;
-    padding: 12px;
-
-    input {
-        width: 15px;
-        height: 15px;
-    }
-}
-.activeDiv {
-    width: 550px;
-    margin-left: 20px;
-    background:#eeeaea;
-    padding: 12px;
-}
-.contactCard {
-    width: 450px;
-    height: 450px;
-    background: #eeeaea;
-    margin-left: 100px;
+  span {
+    text-align: center !important;
     display: flex;
     justify-content: center;
-    padding: 15px;
+    position: relative;
+    color: #2e1add;
+    font-size: larger;
+    font-weight: bolder;
+    // top: 100px;
+  }
+}
+.contactInfo {
+  width: 550px;
+  margin-left: 20px;
+  background: none;
+  padding: 12px;
 
-    .customContactCard {
+  input {
+    width: 15px;
+    height: 15px;
+  }
+}
+.activeDiv {
+  width: 550px;
+  margin-left: 20px;
+  background: #eeeaea;
+  padding: 12px;
+}
+.contactCard {
+  width: 450px;
+  height: 450px;
+  background: #eeeaea;
+  margin-left: 100px;
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+
+  .customContactCard {
     background: #eeeaea !important;
     margin-left: 10%;
     margin-right: 10%;
 
     .customAvatar {
-        margin-left: 35%;
-        margin-right: 30%;
-        // background: none !important;
+      margin-left: 35%;
+      margin-right: 30%;
     }
-
-    }
-    .customContactCard ul li {
+  }
+  .customContactCard ul li {
     background: #eeeaea !important;
     margin-top: 5px;
-    }
-    .customContactCard ul span {
-        font-weight: 500 ;
-        }
-
+  }
+  .customContactCard ul span {
+    font-weight: 500;
+  }
 }
 
-@media only screen and (max-width : 500px) {
-    .contactCard {
-        // margin-right: 50%;
-        margin-left: 10%;
-    }
+@media only screen and (max-width: 500px) {
+  .contactCard {
+    margin-left: 10%;
+  }
 }
-@media only screen and (max-width : 1439px) {
-    .contactInfo {
-        // margin-right: 50%;
-        margin-left: 0;
-        width: 500px;
-    }
-    .contactCard {
-       margin-left: 40px;
-       margin-right: 50px !important;
-    }
-    .contactHeaderTwo {
-        margin-left: 0;
-    }
+@media only screen and (max-width: 1439px) {
+  .contactInfo {
+    margin-left: 0;
+    width: 500px;
+  }
+  .contactCard {
+    margin-left: 40px;
+    margin-right: 50px !important;
+  }
+  .contactHeaderTwo {
+    margin-left: 0;
+  }
 }
-
-
